2004-04-23 David Inglis

	fix for https://bugs.eclipse.org/bugs/show_bug.cgi?id=59680
	
	* src/org/eclipse/cdt/launch/internal/CApplicationLaunchShortcut.java
	* src/org/eclipse/cdt/launch/internal/CPropertyTester.java
	* plugin.xml
	
2004-04-19 Alain Magloire
	Core Model interface throws Exception

	* src/org/eclipse/cdt/launch/internal/CApplicationLaunchShortcut.java
	* src/org/eclipse/cdt/launch/ui/CMaintab.java

2004-04-06 Mikhail Khodjaiants

	Do not remove debugger process from launch.
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java

2004-03-25 David Inglis

	getProcessList can throw a CoreException now.
	
	* src/org/eclipse/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java
	
2004-03-01 James Ciesielski

	Marked those strings that are non-translatable as such and 
	externalized those strings that can be translated.

	* src/org/eclipse/cdt/launch/AbstractCLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/CApplicationLaunchShortcut.java
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/AbstractCDebuggerTab.java
	* src/org/eclipse/cdt/launch/internal/ui/CoreFileCLaunchConfigurationTab.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchUIPlugin.java
	* src/org/eclipse/cdt/launch/internal/ui/WorkingDirectoryBlock.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchUIPluginResources.properties
	* src/org/eclipse/cdt/launch/ui/CArgumentsTab.java
	* src/org/eclipse/cdt/launch/ui/CDebuggerTab.java
	* src/org/eclipse/cdt/launch/ui/CEnvironmentTab.java
	* src/org/eclipse/cdt/launch/ui/CLaunchConfigurationTab.java
	* src/org/eclipse/cdt/launch/ui/CMainTab.java
	* src/org/eclipse/cdt/launch/ui/CorefileDebuggerTab.java
	* src/org/eclipse/cdt/launch/ui/CSourceLookupTab.java

2004-02-18 Alain Magloire
