@@ -57,6 +57,13 @@ public class CoreFileLaunchDelegate extends AbstractCLaunchDelegate {
 			dsession = debugConfig.getDebugger().createCoreSession(config, exeFile, corefile);
 			debugger = dsession.getSessionProcess();
 		} catch (CDIException e) {
+			if (dsession != null) {
+				try {
+					dsession.terminate();
+				} catch (CDIException ex) {
+					// ignore
+				}
+			}
 			abort(LaunchUIPlugin.getResourceString("CoreFileLaunchDelegate.Failed_Launching_CDI_Debugger"), e, ICDTLaunchConfigurationConstants.ERR_INTERNAL_ERROR); //$NON-NLS-1$
 		}
 		if ( debugger != null ) {
